--- a/src/assets/styles/components/_user-icon.scss
+++ b/src/assets/styles/components/_user-icon.scss
@@ -1,4 +1,8 @@
 .user-icon {
+    background-color: transparent;
+    border: transparent;
 	display: flex;
 	align-self: center;
+    cursor: pointer;
+    
 }
