--- a/src/assets/styles/components/layout/_app-header.scss
+++ b/src/assets/styles/components/layout/_app-header.scss
@@ -2,7 +2,9 @@
     flex-grow: $headerHeight;
     padding: calc($layoutPadding / 2) $layoutPadding;
     display: flex;
-    align-items: center;
+    // align-items: center;
     justify-content: space-between;
+    z-index: 10;
+    background-color: $mainBgc;
     
 }
