--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,9 @@
 @import 'components/user-menu';
 @import 'components/market/market-list';
 @import 'components/market/market-preview';
+@import 'components/UI/modal/backdrop';
+@import 'components/UI/modal/modal-content';
+@import 'components/UI/container';
 
 @import 'components/loader';
 
