--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -3,7 +3,8 @@
 $mainBgc: rgb(83, 83, 83);;
 $secBgc: #111;
 $txt: #fff;
-$brand: #1abc9c;
+$brand: #30d0fb;
+$brandSec: #0cb4d4;
 $cardBgc: hsl(0, 0%, 9%);
 $cardHoverBgc: #282828;
 
