--- a/src/assets/styles/views/_login.scss
+++ b/src/assets/styles/views/_login.scss
@@ -1,11 +1,33 @@
-.login {
-	height: $mainContentHeight;
-    padding: $layoutPadding;
-	overflow-y: scroll;
-	padding: $layoutPadding;
-
-	//scroll-bar
-	::-webkit-slider-thumb {
-		background-color: blue;
+.login-form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	& > * {
+		width: 100%;
 	}
+	input {
+		font-size: 1rem;
+		background-color: #fafbfc;
+		border-radius: 3px;
+		border: 2px solid #dfe1e6;
+		height: 44px;
+		padding: 7px;
+		transition: background-color 0.2s ease-in-out 0s,
+			border-color 0.2s ease-in-out 0s;
+		margin-bottom: 17px;
+		outline: none;
+	}
+}
+.btn-login {
+	color: #fff;
+	background: linear-gradient(180deg, $brand, $brandSec);
+	border: none;
+	font-weight: 700;
+	box-shadow: none;
+	font-size: 14px;
+	line-height: 20px;
+	border-radius: 3px;
+	padding: 6px 12px;
+	transition: background-color 0.2s;
 }
