--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -1,38 +1,38 @@
-/* Media queries Breakpoint mixins */
+// /* Media queries Breakpoint mixins */
 
-@mixin for-mobile-layout {
-  @media (max-width: $break-narrow) {
-    @content;
-  }
-}
+// @mixin for-mobile-layout {
+//   @media (max-width: $break-narrow) {
+//     @content;
+//   }
+// }
 
-@mixin for-narrow-layout {
-  @media (min-width: $break-narrow) {
-    @content;
-  }
-}
+// @mixin for-narrow-layout {
+//   @media (min-width: $break-narrow) {
+//     @content;
+//   }
+// }
 
-@mixin for-normal-layout {
-  @media (min-width: $break-normal) {
-    @content;
-  }
-}
+// @mixin for-normal-layout {
+//   @media (min-width: $break-normal) {
+//     @content;
+//   }
+// }
 
-@mixin for-wide-layout {
-  @media (min-width: $break-wide) {
-    @content;
-  }
-}
+// @mixin for-wide-layout {
+//   @media (min-width: $break-wide) {
+//     @content;
+//   }
+// }
 
-@mixin layoutGTC($max) {
-  grid-template-columns:
-    minmax($layoutPadding, 1fr)
-    minmax(auto, $max)
-    minmax($layoutPadding, 1fr);
-}
+// @mixin layoutGTC($max) {
+//   grid-template-columns:
+//     minmax($layoutPadding, 1fr)
+//     minmax(auto, $max)
+//     minmax($layoutPadding, 1fr);
+// }
 
 
-/* Media  Mixins */
+// /* Media  Mixins */
 
 //aspect ratio mixin
 @mixin aspect-ratio($width: 1, $height: 1) {
