Render market data

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,9 +1,10 @@
 // COLOR PALETTE
+$brand: #30d0fb;
+$secBrand: #0cb4d4;
 $mainBgc: rgb(83, 83, 83);
 $secBgc: #111;
+$thirdBgc: rgba(197, 197, 197, 0.33);
 $txt: #fff;
-$brand: #30d0fb;
-$brandSec: #0cb4d4;
 $cardBgc: hsl(0, 0%, 9%);
 $cardHoverBgc: #282828;
 
