--- a/src/assets/styles/views/_login.scss
+++ b/src/assets/styles/views/_login.scss
@@ -21,7 +21,7 @@
 }
 .btn-login {
 	color: #fff;
-	background: linear-gradient(180deg, $brand, $brandSec);
+	background: linear-gradient(180deg, $brand, $secBrand);
 	border: none;
 	font-weight: 700;
 	box-shadow: none;
