--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,6 +14,8 @@
 @import 'components/user-menu';
 @import 'components/market/market-list';
 @import 'components/market/market-preview';
+@import 'components/market/market-title';
+@import 'components/market/details-preview';
 @import 'components/UI/modal/backdrop';
 @import 'components/UI/modal/modal-content';
 @import 'components/UI/container';
