--- a/src/assets/styles/components/UI/_container.scss
+++ b/src/assets/styles/components/UI/_container.scss
@@ -4,8 +4,7 @@
 	padding: $layoutPadding calc($layoutPadding * 2);
 	box-shadow: 0 0 10px rgb(0 0 0 / 12%);
 	border-radius: 0.6em;
-	width: 40%;
-	height: calc($mainContentHeight*0.75);
+	height: calc($mainContentHeight*0.8);
 	display: flex;
 	flex-direction: column;
 	margin: 20px auto;
@@ -13,5 +12,21 @@
 	justify-content: center;
 	&>*{
 		margin-bottom: 20px;
+	}
+}
+
+@media (max-width: $break-mobile) {
+	.container {
+		width: 80%;
+	}
+}
+@media (min-width: $break-mobile) and (max-width: $break-narrow) {
+	.container {
+		width: 60%;
+	}
+}
+@media (min-width: $break-narrow) {
+	.container {
+		width: 40%;
 	}
 }
