--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -51,6 +51,13 @@ p {
 	font-size: 0.75rem;
 }
 
+select {
+	margin: auto;
+	width: 200px;
+	border-radius: 1em;
+	height: 1.5em;
+}
+
 ul {
 	margin: 0;
 	padding: 0;
