--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,23 +1,23 @@
 // Montserrat
 @font-face {
-    font-family: Montserrat, sans-serif;
+    font-family: Montserrat;
     src: url(~@/assets/fonts/Montserrat/Montserrat.ttf);
 }
 @font-face {
-    font-family: 'Montserrat-bold', sans-serif;
+    font-family: Montserrat-bold;
     src: url(~@/assets/fonts/Montserrat/Montserrat-Bold.ttf);
 }
 @font-face {
-    font-family: 'Montserrat-italic', sans-serif;
+    font-family: Montserrat-italic;
     src: url(~@/assets/fonts/Montserrat/Montserrat-Italic.ttf);
 }
 
 // Gotham
 @font-face {
-    font-family: Gotham, sans-serif;
+    font-family: Gotham;
     src: url(~@/assets/fonts/Gotham/Gotham.ttf);
 }
 @font-face {
-    font-family: 'Gotham-Bold', sans-serif;
+    font-family: Gotham-Bold;
     src: url(~@/assets/fonts/Gotham/Gotham-Bold.ttf);
 }
