--- a/src/assets/styles/components/UI/modal/_modal-content.scss
+++ b/src/assets/styles/components/UI/modal/_modal-content.scss
@@ -13,6 +13,9 @@
 	color: $txt;
 	display: flex;
 	flex-direction: column;
-		justify-content: flex-start;
+	justify-content: flex-start;
 	animation: container-appears 1s ease-out forwards;
+	select{
+		align-self: center;
+	}
 }
