--- a/src/assets/styles/components/layout/_logo.scss
+++ b/src/assets/styles/components/layout/_logo.scss
@@ -1,7 +1,7 @@
 .logo {
-    font-family: Montserrat;
+    font-family: Gotham;
     &::after{
         color: $brand;
-        content: '.';
+        content: ' .';
     }
 }
