--- a/src/assets/styles/components/market/_market-preview.scss
+++ b/src/assets/styles/components/market/_market-preview.scss
@@ -30,19 +30,19 @@
 		height: 2rem;
 		font-size: 0.75rem;
 		width: 90%;
-	}
-	.market-rise {
-		background-color: #f0f9eb;
-		border: 1px solid #e1f3d8;
-		color: #67c23a;
-		&::before {
-			content: '+';
+		&.market-rise {
+			background-color: #f0f9eb;
+			border: 1px solid #e1f3d8;
+			color: #67c23a;
+			&::before {
+				content: '+';
+			}
 		}
-	}
-	.market-decline {
-		background-color: #fef0f0;
-		border: 1px solid #fde2e2;
-		color: #f56c6c;
+		&.market-decline {
+			background-color: #fef0f0;
+			border: 1px solid #fde2e2;
+			color: #f56c6c;
+		}
 	}
 }
 
